// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb mcp-server-connection generator > should add rdb serve-local dependency to the mcp-server prefixed serve-local 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#mcp-server",
        "name": "my-mcp",
        "path": "src/my-mcp",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "my-mcp-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb mcp-server-connection generator > should be idempotent for server.ts, http.ts and stdio.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js';

export const createServer = ({
  db,
}: {
  db: Awaited<ReturnType<typeof getDb>>;
}) => {
  const server = new McpServer({
    name: 'my-service',
    version: '1.0.0',
  });

  return server;
};
"
`;

exports[`ts#rdb mcp-server-connection generator > should be idempotent for server.ts, http.ts and stdio.ts 2`] = `
"#!/usr/bin/env node
import { getPrisma as getDb } from 'db';
import { createServer } from './server.js';
import { StreamableHTTPServerTransport } from '@modelcontextprotocol/sdk/server/streamableHttp.js';
import express, { Request, Response } from 'express';

const PORT = parseInt(process.env.PORT || '8000');
const app = express();
app.use(express.json());

app.post('/mcp', async (req: Request, res: Response) => {
  try {
    const db = await getDb();
    const server = createServer({ db });
    const transport = new StreamableHTTPServerTransport({
      sessionIdGenerator: undefined,
    });
    await server.connect(transport);
  } catch (error) {
    console.error(error);
  }
});
"
`;

exports[`ts#rdb mcp-server-connection generator > should be idempotent for server.ts, http.ts and stdio.ts 3`] = `
"#!/usr/bin/env node
import { getPrisma as getDb } from 'db';
import { StdioServerTransport } from '@modelcontextprotocol/sdk/server/stdio.js';
import { createServer } from './server.js';

export const startMcpServer = async () => {
  const transport = new StdioServerTransport();
  const db = await getDb();
  await createServer({ db }).connect(transport);
};
"
`;

exports[`ts#rdb mcp-server-connection generator > should fall back to mcp-server-serve-local when no component name 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#mcp-server",
        "name": "mcp-server",
        "path": "src/mcp-server",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "mcp-server-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb mcp-server-connection generator > should inject db into server.ts, http.ts and stdio.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js';

export const createServer = ({
  db,
}: {
  db: Awaited<ReturnType<typeof getDb>>;
}) => {
  const server = new McpServer({
    name: 'my-service',
    version: '1.0.0',
  });

  return server;
};
"
`;

exports[`ts#rdb mcp-server-connection generator > should inject db into server.ts, http.ts and stdio.ts 2`] = `
"#!/usr/bin/env node
import { getPrisma as getDb } from 'db';
import { createServer } from './server.js';
import { StreamableHTTPServerTransport } from '@modelcontextprotocol/sdk/server/streamableHttp.js';
import express, { Request, Response } from 'express';

const PORT = parseInt(process.env.PORT || '8000');
const app = express();
app.use(express.json());

app.post('/mcp', async (req: Request, res: Response) => {
  try {
    const db = await getDb();
    const server = createServer({ db });
    const transport = new StreamableHTTPServerTransport({
      sessionIdGenerator: undefined,
    });
    await server.connect(transport);
  } catch (error) {
    console.error(error);
  }
});
"
`;

exports[`ts#rdb mcp-server-connection generator > should inject db into server.ts, http.ts and stdio.ts 3`] = `
"#!/usr/bin/env node
import { getPrisma as getDb } from 'db';
import { StdioServerTransport } from '@modelcontextprotocol/sdk/server/stdio.js';
import { createServer } from './server.js';

export const startMcpServer = async () => {
  const transport = new StdioServerTransport();
  const db = await getDb();
  await createServer({ db }).connect(transport);
};
"
`;

exports[`ts#rdb mcp-server-connection generator > should support multiple rdb connections 1`] = `
"import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js';

export const createServer = ({
  postgresDb,
  mysqlDb,
}: {
  postgresDb: Awaited<ReturnType<typeof getPostgresDb>>;
  mysqlDb: Awaited<ReturnType<typeof getMysqlDb>>;
}) => {
  const server = new McpServer({
    name: 'my-service',
    version: '1.0.0',
  });

  return server;
};
"
`;

exports[`ts#rdb mcp-server-connection generator > should support multiple rdb connections 2`] = `
"#!/usr/bin/env node
import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { createServer } from './server.js';
import { StreamableHTTPServerTransport } from '@modelcontextprotocol/sdk/server/streamableHttp.js';
import express, { Request, Response } from 'express';

const PORT = parseInt(process.env.PORT || '8000');
const app = express();
app.use(express.json());

app.post('/mcp', async (req: Request, res: Response) => {
  try {
    const postgresDb = await getPostgresDb();
    const mysqlDb = await getMysqlDb();
    const server = createServer({ postgresDb, mysqlDb });
    const transport = new StreamableHTTPServerTransport({
      sessionIdGenerator: undefined,
    });
    await server.connect(transport);
  } catch (error) {
    console.error(error);
  }
});
"
`;

exports[`ts#rdb mcp-server-connection generator > should support multiple rdb connections 3`] = `
"#!/usr/bin/env node
import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { StdioServerTransport } from '@modelcontextprotocol/sdk/server/stdio.js';
import { createServer } from './server.js';

export const startMcpServer = async () => {
  const transport = new StdioServerTransport();
  const postgresDb = await getPostgresDb();
  const mysqlDb = await getMysqlDb();
  await createServer({ postgresDb, mysqlDb }).connect(transport);
};
"
`;
